# TE-gateway

./: .gitignore  CMakeLists.txt  Makefile  README.md  upload.bat
components/TE_mqtt/: CMakeLists.txt
components/TE_mqtt/src/: TE_mqtt.c  TE_mqtt.h  backup_mqtt.pem  quance_mqtt.pem
components/display-service/: CMakeLists.txt  display-service.c
components/display-service/include/: display-service.h
components/esp32-wifi-manager-master/: CMakeList.old  CMakeLists.txt  Kconfig
components/esp32-wifi-manager-master/src/: aerobox.js  code.js  control.html  control.js  dataindex.html  dns_server.c  eth_ap_fork_glue.h  eth_plugin.c  eth_plugin.h  http_app.c  index.html  otaindex.html  routing.js  style.css  wifi_manager.c  wifi_manager.h
components/te-ws-sv/: CMakeLists.txt  te-ws-sv.c
components/te-ws-sv/include/: te-ws-sv.h
components/uart_service/: CMakeLists.txt  uart_service.c
components/uart_service/include/: uart_service.h
components/utils/: CMakeLists.txt  Kconfig.projbuild
components/utils/include/: esp_mem.h  esp_storage.h  esp_utils.h  te_gw_setup.h
components/utils/src/: esp_storage.c  esp_timesync.c  te_gw_setup.c
main/: main.cpp
